// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CountAggregationCell /> renders overlay trigger 1`] = `
<OverlayTrigger
  getOverlay={[Function]}
  trigger="hover"
>
  <CountAggregationCell__Link
    href="https://foo"
  >
    3
  </CountAggregationCell__Link>
</OverlayTrigger>
`;

exports[`<CountAggregationCell /> renders overlay trigger 2`] = `
<_CountAggregationOverlay
  Row={[Function]}
  count={3}
  items={Array []}
  link="https://foo"
/>
`;

exports[`<CountAggregationOverlay /> renders see more link 1`] = `
<Overlay
  showArrow={true}
>
  <CountAggregationCell__ListItem>
    <CountAggregationCell__Link
      href="https://foo"
    >
      + 45 more
    </CountAggregationCell__Link>
  </CountAggregationCell__ListItem>
</Overlay>
`;

exports[`<CountAggregationOverlay /> renders small list 1`] = `
<Overlay
  showArrow={true}
>
  <CountAggregationCell__ListItem>
    <FakeRow
      name="bar"
    />
  </CountAggregationCell__ListItem>
  <CountAggregationCell__ListItem>
    <FakeRow
      name="foo"
    />
  </CountAggregationCell__ListItem>
</Overlay>
`;
